--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,25 @@
 .DS_Store
 /build
 /captures
+
+.idea/.name
+
+.idea/compiler.xml
+
+.idea/copyright/profiles_settings.xml
+
+.idea/dictionaries/hidayat.xml
+
+.idea/encodings.xml
+
+.idea/gradle.xml
+
+.idea/inspectionProfiles/profiles_settings.xml
+
+.idea/inspectionProfiles/Project_Default.xml
+
+.idea/misc.xml
+
+.idea/modules.xml
+
+.idea/runConfigurations.xml
