--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,9 @@
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NewDialog">
         </activity>
+        <activity android:name=".TransactionCategory"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme.CategoryChoice"></activity>
     </application>
 
 </manifest>
